--- a/packages/shared-components/src/components/onto-operations-notification/onto-operations-notification.scss
+++ b/packages/shared-components/src/components/onto-operations-notification/onto-operations-notification.scss
@@ -161,8 +161,4 @@
       transition: all 0.2s ease-in;
     }
   }
-
-  .icon-import {
-    font-size: 21px;
-  }
 }
